about arrow and hover effect on mobile bug fix

--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -271,6 +271,7 @@
 
 .contacts-page {
     min-height: 100vh;
+    min-height: calc(var(--vh) * 100);
         .contacts__wrapper {
             padding: 182px 64px;
             padding-bottom: 170px;
