--- a/src/scss/components/pop-up-modal.scss
+++ b/src/scss/components/pop-up-modal.scss
@@ -474,9 +474,15 @@
           font-size: 24px;
           color: variables.$color-modal-main;
         }
-
-        &:hover {
-          background-color: rgba(255, 255, 255, 0.2);
+        @include respond-to(lg) {
+          &:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+          }
+        }
+        @include respond-to(md) {
+          &:active {
+            background-color: rgba(255, 255, 255, 0.2);
+          }
         }
       }
 
@@ -515,9 +521,16 @@
             @include respond-to(sm) {
                 margin-left: 7px;
             }
-      &:hover {
-        opacity: 0.7;
-      }
+            @include respond-to(lg) {
+              &:hover {
+                opacity: 0.7;
+              }
+            }
+            @include respond-to(md) {
+              &:active {
+                opacity: 0.7;
+              }
+            }
     }
 
     &__afterword {
