--- a/src/scss/components/pop-up-success.scss
+++ b/src/scss/components/pop-up-success.scss
@@ -86,8 +86,15 @@
     cursor: pointer;
     transition: 0.3s;
     background-color: variables.$color-modal-main;
-    &:hover {
-      opacity: 0.7;
+    @include respond-to(lg) {
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+    @include respond-to(md) {
+      &:active {
+        opacity: 0.7;
+      }
     }
   }
 }
