--- a/src/scss/pages/news/news-contacts.scss
+++ b/src/scss/pages/news/news-contacts.scss
@@ -177,9 +177,15 @@
     align-items: center;
     justify-content: center;
     transition: transform 0.3s ease;
-
-    &:hover {
-      transform: translateX(2px);
+    @include respond-from(lg) {
+      &:hover {
+        transform: translateX(2px);
+      }
+    }
+    @include respond-to(md) {
+      :active {
+        transform: translateX(2px);
+      }
     }
   }
 
